--- a/app/views/cover_view/_cover_view.html.erb
+++ b/app/views/cover_view/_cover_view.html.erb
@@ -10,7 +10,7 @@
       <div class="game-cover-effect" uk-toggle="target: #i-<%= game[:igdb_id] %>">
       <%= content_tag(:div, id: "gc-#{ game[:igdb_id] }", class: 'no-cover') do %>
         <%= content_tag(:div, game[:name], class: 'no-cover-game-name unselectable') %>
-        <%= render 'svgs/no_image' %>
+        <%= svg 'no_image' %>
       <% end %>
     <% end %>
     <% if game["xtra"] %>
