--- a/app/views/cover_view/_game_info.html.erb
+++ b/app/views/cover_view/_game_info.html.erb
@@ -16,7 +16,7 @@
         <% if cover %>
         <%= image_tag('', class: 'game-cover info-cover', width: cover[:width], 'data-src' => cover[:url], alt: game_name, 'draggable' => 'false', 'uk-img' => "target: #gc-#{ igdb_id }" ) %>
         <% else %>
-        <div class="i-no-cover"><%= render 'svgs/no_image' %>
+        <div class="i-no-cover"><%= svg 'no_image_i' %>
             <span>No Cover Available</span>
         </div>
         <% end %>
@@ -99,61 +99,66 @@
         <div class="b-<%= igdb_id %>">
             <div id="add-collection-form-<%= igdb_id %>" class="add-form" uk-dropdown="toggle: #add-collection-<%= igdb_id %>; mode: click; pos: bottom-left; delay-hide: 100; boundary-align: true; boundary: .b-<%= igdb_id %>" >
                 <button class="uk-dropdown-close add-form-close" type="button" uk-close></button>
-                <%= form_for(:game, url: games_path, remote: true) do |f| %>
-                <% collection = @initial_collections['collection'] %>
-                <%= hidden_field_tag :collection, collection.id %>
-                <%= f.hidden_field :needs_platform, value: true %>
-                <%= f.hidden_field :name, value: game_name %>
-                <%= f.hidden_field :igdb_id, value: igdb_id %>
-                <% if platforms = game[:platforms] %>
-                <% platforms.each do |id| %>
-                <%= f.hidden_field :platforms, value: id, multiple: true %>
-                <% end %>
-                <% end %>
-                <%= f.hidden_field :first_release_date, value: game[:first_release_date] %>
-                <%= f.hidden_field :summary, value: game[:summary] %>
-                <%= f.hidden_field :status, value: game[:status] %>
-                <%= f.hidden_field :category, value: game[:category] %>
-                <%= f.hidden_field :cover, value: game[:cover] %>
-                <%= f.hidden_field :cover_width, value: game[:cover_width] %>
-                <%= f.hidden_field :cover_height, value: game[:cover_height] %>
-                <% if devs %>
-                <% devs.each do |dev| %>
-                <%= f.hidden_field :developers, value: dev, multiple: true %>
-                <% end %>
-                <% end %>
-                <% if screens %>
-                <% screens.each do |screen| %>
-                <%= f.hidden_field :screenshots, value: screen, multiple: true %>
-                <% end %>
-                <% end %>
-                <div class="select-platform">
-                    <div uk-form-custom="target: > * > span:last-child">
-                        <% if game[:platforms].size > 1 %>
-                        <%= f.select(:platform, platforms_for_select(game), prompt: 'Select platform') %>
-                        <span class='bigs'>
-                            <span class="platform-icon"><%= render 'svgs/platform_icon' %></span>
-                            <span></span>
-                        </span>
-                        <% else %>
-                        <%= f.select(:platform, platforms_for_select(game)) %>
-                        <span class='bigs'>
-                            <span class="platform-green"><%= render 'svgs/platform_icon' %></span>
-                            <span></span>
-                        </span>
+                <% if game[:platforms] %>
+                    <%= form_for(:game, url: games_path, remote: true) do |f| %>
+                    <% collection = @initial_collections['collection'] %>
+                    <%= hidden_field_tag :collection, collection.id %>
+                    <%= f.hidden_field :needs_platform, value: true %>
+                    <%= f.hidden_field :name, value: game_name %>
+                    <%= f.hidden_field :igdb_id, value: igdb_id %>
+                    <% if platforms = game[:platforms] %>
+                        <% platforms.each do |id| %>
+                            <%= f.hidden_field :platforms, value: id, multiple: true %>
                         <% end %>
+                    <% end %>
+                    <%= f.hidden_field :first_release_date, value: game[:first_release_date] %>
+                    <%= f.hidden_field :summary, value: game[:summary] %>
+                    <%= f.hidden_field :status, value: game[:status] %>
+                    <%= f.hidden_field :category, value: game[:category] %>
+                    <%= f.hidden_field :cover, value: game[:cover] %>
+                    <%= f.hidden_field :cover_width, value: game[:cover_width] %>
+                    <%= f.hidden_field :cover_height, value: game[:cover_height] %>
+                    <% if devs %>
+                        <% devs.each do |dev| %>
+                            <%= f.hidden_field :developers, value: dev, multiple: true %>
+                        <% end %>
+                    <% end %>
+                    <% if screens %>
+                        <% screens.each do |screen| %>
+                            <%= f.hidden_field :screenshots, value: screen, multiple: true %>
+                        <% end %>
+                    <% end %>
+                    <div class="select-platform">
+                        <div uk-form-custom="target: > * > span:last-child">
+                            <% if game[:platforms].size > 1 %>
+                                <%= f.select(:platform, platforms_for_select(game), prompt: 'Select platform') %>
+                                <span class='bigs'>
+                                <span class="platform-icon"><%= render 'svgs/platform_icon' %></span>
+                                <span></span>
+                                </span>
+                            <% else %>
+                                <%= f.select(:platform, platforms_for_select(game)) %>
+                                <span class='bigs'>
+                                <span class="platform-green"><%= render 'svgs/platform_icon' %></span>
+                                <span></span>
+                                </span>
+                            <% end %>
+                        </div>
                     </div>
-                </div>
-                <div class="uk-margin uk-grid-small uk-child-width-1-2 uk-grid">
-                    <label><%= f.radio_button(:physical, true, checked: true, class: "physical") %><%= render 'svgs/gamebox_icon' %> Physical</label>
-                    <label><%= f.radio_button(:physical, false, class: "digital") %><%= render 'svgs/digital_icon' %> Digital</label>
-                </div>
-                <button name="button" type="submit" class="add-button">Add</button><span class="add-form-errors"></span>
+                    <div class="uk-margin uk-grid-small uk-child-width-1-2 uk-grid">
+                        <label><%= f.radio_button(:physical, true, checked: true, class: "physical") %><%= render 'svgs/gamebox_icon' %> Physical</label>
+                        <label><%= f.radio_button(:physical, false, class: "digital") %><%= render 'svgs/digital_icon' %> Digital</label>
+                    </div>
+                    <button name="button" type="submit" class="add-button">Add</button><span class="add-form-errors"></span>
+                    <% end %>
+                    <!-- ALREADY IN -->
+                    <div class="already-in">
+                        <%= render(partial: 'cover_view/already_in_collection', locals: { collection: collection, game_name: game_name, igdb_id: igdb_id }) if in_initial['collection']  %>
+                    </div>
+                <% else %>
+                    <p>You cant add game with no platform to your main collection,
+                    will be fixed soon</p>
                 <% end %>
-                <!-- ALREADY IN -->
-                <div class="already-in">
-                    <%= render(partial: 'cover_view/already_in_collection', locals: { collection: collection, game_name: game_name, igdb_id: igdb_id }) if in_initial['collection']  %>
-                </div>
             </div>
             <!-- ADD TO CUSTOM COLLECTION -->
             <div id="add-custom-form-<%= igdb_id %>" class="add-form" uk-dropdown="toggle: #add-custom-<%= igdb_id %>; mode: click; pos: bottom-left; delay-hide: 100; boundary-align: true; boundary: .b-<%= igdb_id %>">
@@ -208,28 +213,33 @@
                 </div>
                 <!-- DEPENDS ON COLLECTION -->
                 <div id="platform-option" style="display: none">
-                    <%= f.hidden_field :needs_platform, value: false %>
-                    <div class="uk-margin select-platform">
-                        <div uk-form-custom="target: > * > span:last-child">
-                            <% if game[:platforms].size > 1 %>
-                            <%= f.select(:platform, platforms_for_select(game), prompt: 'Select platform') %>
-                            <span class='bigs'>
-                                <span class="platform-icon"><%= render 'svgs/platform_icon' %></span>
-                                <span></span>
-                            </span>
-                            <% else %>
-                            <%= f.select(:platform, platforms_for_select(game)) %>
-                            <span class='bigs'>
-                                <span class="platform-green"><%= render 'svgs/platform_icon' %></span>
-                                <span></span>
-                            </span>
-                            <% end %>
+                    <% if game[:platforms] %>
+                        <%= f.hidden_field :needs_platform, value: false %>
+                        <div class="uk-margin select-platform">
+                            <div uk-form-custom="target: > * > span:last-child">
+                                <% if game[:platforms].size > 1 %>
+                                <%= f.select(:platform, platforms_for_select(game), prompt: 'Select platform') %>
+                                <span class='bigs'>
+                                    <span class="platform-icon"><%= render 'svgs/platform_icon' %></span>
+                                    <span></span>
+                                </span>
+                                <% else %>
+                                <%= f.select(:platform, platforms_for_select(game)) %>
+                                <span class='bigs'>
+                                    <span class="platform-green"><%= render 'svgs/platform_icon' %></span>
+                                    <span></span>
+                                </span>
+                                <% end %>
+                            </div>
                         </div>
-                    </div>
-                    <div class="uk-margin uk-grid-small uk-child-width-1-2 uk-grid">
-                        <label><%= f.radio_button(:physical, true, checked: true, class: "physical") %><%= render 'svgs/gamebox_icon' %> Physical</label>
-                        <label><%= f.radio_button(:physical, false, class: "digital") %><%= render 'svgs/digital_icon' %> Digital</label>
-                    </div>
+                        <div class="uk-margin uk-grid-small uk-child-width-1-2 uk-grid">
+                            <label><%= f.radio_button(:physical, true, checked: true, class: "physical") %><%= render 'svgs/gamebox_icon' %> Physical</label>
+                            <label><%= f.radio_button(:physical, false, class: "digital") %><%= render 'svgs/digital_icon' %> Digital</label>
+                        </div>
+                    <% else %>
+                        <p>You cant add game with no platform to collection that needs platform
+                        will be fixed soon</p>
+                    <% end %>
                 </div>
                 <button name="button" type="submit" class="add-button">Add</button><span class="add-form-errors"></span>
                 <% end %>
