--- a/app/views/static_pages/_show_more.js.erb
+++ b/app/views/static_pages/_show_more.js.erb
@@ -1,2 +1,6 @@
 $("#show-more").html("<%= escape_javascript(render :partial => 'results') %>");
 $("#show-more").attr('id', 'showed_more');
+
+// Fit game title inside no-cover
+textFit(document.getElementsByClassName("no-cover-game-name"), {minFontSize:18, maxFontSize: 26});
+$(".no-cover-game-name").addClass('fitted')
