Fixed load more games problem.

--- a/app/views/static_pages/_results.html.erb
+++ b/app/views/static_pages/_results.html.erb
@@ -19,6 +19,7 @@
   <% end %>
 <% else %>
   <div class="no-results">
+    <p>your offset "<%= @inquiry.offset %>"</p>
     <p>0 results for "<%= @inquiry.input %>"</p>
     <p>Try using "*" for searching (example: *shadd* > El Shaddai: Ascension of the Metatron)</p>
   </div>
