Change load more feature to use prepared query, not input.

--- a/app/views/static_pages/_results.html.erb
+++ b/app/views/static_pages/_results.html.erb
@@ -3,7 +3,7 @@
   <% if @inquiry.is_more? %>
   <div id="show-more">
     <%= form_tag("/search", method: :get, remote: true) do %>
-    <%= hidden_field_tag :last_input, @inquiry.last_input %>
+    <%= hidden_field_tag :last_query, @inquiry.query %>
     <%= hidden_field_tag :last_offset, @inquiry.offset %>
     <%= submit_tag "Load more...",
     class: "uk-button uk-button-default md-button",
