Add better full_search method (igdbquery), with ability to update existing games. Fix additional info in developers and character search. Finish NSS. (Not fully tested, used all requests)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -714,7 +714,7 @@ button.game-warning.uk-icon:focus {
 
 // Developers, Characers - - - - - - - - - - - - - - - - - - - - - - - - - - -//
 
-.xtra-info {
+.addl-info {
     box-sizing: border-box;
     width: 100%;
     max-height: 100%;
