--- a/app/views/shared/_my_games_table.html.erb
+++ b/app/views/shared/_my_games_table.html.erb
@@ -1,26 +1,46 @@
-<table class="uk-table uk-table-small uk-table-hover">
-    <caption><%= collection.custom_name || collection.name%></caption>
+<table class="uk-table uk-table-small">
     <thead>
         <tr>
+            <th></th>
             <th>Name</th>
-            <th>First Release Date</th>
+            <th>Release Date</th>
             <th>Developers</th>
             <% if needs_p = collection.needs_platform %>
             <th>Platform</th>
             <th>Physical / Digital</th>
+            <th></th>
             <% end %>
         </tr>
     </thead>
     <tbody>
         <% collection.games.each do |game| %>
         <tr>
+            <td><%= get_game_thumb(game) %></td>
             <%= content_tag(:td, game.name) %>
-            <%= content_tag(:td, Time.at(game.first_release_date).year) %>
-            <%= content_tag(:td, game.developers.join(', ')) %>
+            <%= content_tag(:td, Time.at(game.first_release_date).year) if game.first_release_date %>
+            <%= content_tag(:td, game.developers.join(', ')) if game.developers %>
             <% if needs_p %>
                 <%= content_tag(:td, game.platform_name) %>
                 <%= content_tag(:td, game.physical ? 'Physical' : 'Digital') %>
             <% end %>
+            <td>
+        <div class="game-nav">
+            <ul class="uk-iconnav">
+                <li>
+                    <%= content_tag(:a, '',id: "g-move-#{ game.id }", class: "uk-icon-link",
+                    'uk-icon' => 'push', 'uk-tooltip' => "title: Move; pos: top-left") %>
+                </li>
+                <li>
+                    <%= content_tag(:a, '',id: "g-copy-#{ game.id }", class: "uk-icon-link ",
+                    'uk-icon' => 'copy', 'uk-tooltip' => "title: Copy; pos: top-left") %>
+                </li>
+                <li>
+                    <%= content_tag(:a, '',id: "g-delete-#{ game.id }", class: "uk-icon-link ",
+                    'uk-icon' => 'trash', 'uk-tooltip' => "title: Delete; pos: top-left") %>
+                </li>
+            </ul>
+        </div>
+            </td>
         </tr>
         <% end %>
     </tbody>
