--- a/app/views/cover_view/_game_info.html.erb
+++ b/app/views/cover_view/_game_info.html.erb
@@ -248,7 +248,7 @@
                     <%= render(partial: 'cover_view/already_in_custom', locals: { game_name: game_name, igdb_id: igdb_id }) if in_custom %>
                 </div>
                 <% else %>
-                <p style="margin-top: none;">Create custom collection first.</p>
+                <p>Create custom collection first.</p>
                 <% end %>
             </div>
         </div>
