--- a/app/views/shared/_game_panel.html.erb
+++ b/app/views/shared/_game_panel.html.erb
@@ -10,8 +10,8 @@
   <% if needs_p %>
   <div class="g-platform">
     <div class="middle">
-    <%= content_tag(:p, game.platform_name) %>
-    <%= content_tag(:p, game.physical ? 'Physical' : 'Digital') %>
+      <%= content_tag(:p, game.platform_name) %>
+      <%= content_tag(:p, game.physical ? 'Physical' : 'Digital') %>
     </div>
   </div>
   <% end %>
@@ -31,4 +31,53 @@
       </li>
     </ul>
   </div>
+  <div id="g-drop-<%= game.id %>" class="g-drop uk-width-1-1">
+    <div class="uk-grid-collapse" uk-grid>
+      <div class="g-summary uk-width-1-2">
+        <% if summary = get_summary(game, 280, 50) %>
+        <p class="info-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= game.id %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="myFunction(<%= game.id %>)" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= game.id %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="myFunction(<%= game.id %>)" uk-icon="icon: triangle-up"></button></span>
+      </p>
+      <script>
+        function myFunction(id) {
+            var dots = document.getElementById("dots-" + id);
+            var moreText = document.getElementById("more-" + id);
+            if (dots.style.display === "none") {
+                dots.style.display = "inline";
+                moreText.style.display = "none";
+            } else {
+                dots.style.display = "none";
+                moreText.style.display = "inline";
+            }
+        }
+      </script>
+      <% end %>
+      <% end %>
+    </div>
+    <div class="g-screens uk-width-1-4">
+      screens
+    </div>
+    <div class="g-linkse uk-width-1-4">
+      links
+    </div>
+    <div class="g-test">
+      <button id="hide-<%= game.id %>">hide</button>
+    </div>
+  </div>
 </div>
+</div>
+<script>
+$("#g-<%= game.id %>").click(function() {
+    if ($("#g-drop-<%= game.id %>").is(":hidden")) {
+        $("#g-drop-<%= game.id %>").slideDown("slow");
+    }
+});
+
+$("#hide-<%= game.id %>").click(function() {
+    if ($("#g-drop-<%= game.id %>").is(":visible")) {
+        $("#g-drop-<%= game.id %>").slideUp("slow");
+    }
+});
+
+
+
+</script>
