--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,8 +85,8 @@ footer {
     background: #d2d2d2;
     border-radius: 5px;
     box-shadow: -3px 3px 3px -2px rgba(0, 0, 0, 0.16);
-    padding: 10px;
-    margin: 0px 20px;
+    padding: 10px 0px 10px 10px;
+    // margin: 0px 20px;
     transition: all 0.2s ease-in-out;
 }
 
@@ -95,7 +95,10 @@ footer {
     // margin-left: 0px;
 }
 
-.thumb-c { position: relative; }
+.thumb-c {
+    position: relative;
+    max-height: 70px;
+}
 
 .game-thumb {
     border-radius: 3px;
@@ -142,7 +145,7 @@ footer {
 .middle p { margin: 0px; }
 
 .g-nav {
-    padding: 0px 10px 0px 20px;
+    padding: 0px 10px;
     line-height: 70px;
     border-left: 2px solid #00000014;
     ul {
@@ -154,7 +157,6 @@ footer {
 .g-drop { display: none; }
 
 .g-summary {
-    width: 600px;
     margin-left: 80px;
     padding-top: 10px;
     padding-bottom: 20px;
@@ -244,6 +246,7 @@ a.uk-notification-close {
 .m-add {
     color: $light_grey;
     padding: 10px 10px 10px 20px;
+    transition: all 0.3s ease-in-out;
     svg {
         color: $light_grey;
         transition: all 0.3s ease-in-out;
@@ -603,7 +606,7 @@ div.no-results {
     position: fixed;
     bottom: 10%;
     right: 0;
-    z-index: 5;
+    z-index: 150;
 }
 
 .scroll-flip {
