--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,18 @@
     <%= render 'layouts/menu' %>
     <div class="main-container">
       <%= render 'layouts/navigation' %>
-      <div id="big-c" class="uk-container content-wrap">
-        <%= render 'layouts/messages' %>
-        <%= yield %>
+
+      <div class="uk-grid-match uk-grid-collpase" uk-grid>
+        <div class="uk-width-1-6"></div>
+        <div class="uk-width-2-3">
+          <div id="big-c" class="uk-container content-wrap">
+            <%= yield %>
+          </div>
+        </div>
+        <div class="uk-width-1-6"></div>
       </div>
 
-      <%= render 'layouts/footer' %>
+    <%= render 'layouts/footer' %>
     </div>
-  </body>
+</body>
 </html>
