--- a/app/views/static_pages/_results.html.erb
+++ b/app/views/static_pages/_results.html.erb
@@ -2,7 +2,7 @@
   <%= render 'cover_view/cover_view' %>
   <% if @inquiry.is_more? %>
   <div id="show-more">
-    <%= form_tag("/search", method: :get, remote: true) do %>
+    <%= form_tag("/search_games", method: :get, remote: true) do %>
     <%= hidden_field_tag :last_query, @inquiry.query %>
     <%= hidden_field_tag :last_offset, @inquiry.offset %>
     <%= submit_tag "Load more...",
